--- a/_config.yml
+++ b/_config.yml
@@ -53,4 +53,5 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-remote_theme: daviddarnes/alembic@main
+remote_theme: pages-themes/time-machine@v0.2.0
+
